--- a/src/pages/guidelines/themes/overview.mdx
+++ b/src/pages/guidelines/themes/overview.mdx
@@ -186,7 +186,7 @@ borderInteractive = blue60;
 // border
 borderDisabled = gray10;
 
-// ext
+// Text
 textPrimary = gray100;
 textSecondary = gray70;
 textPlaceholder = gray40;
@@ -276,109 +276,168 @@ There are several token categories:
 Each theme is assigned universal color variables, which are determined by common
 roles and usage. This allows for uniform color application across themes while
 maintaining full styling flexibility. For more information, see the
-[color page](/guidelines/color/overview).
+[color](/guidelines/color/overview) page.
 
 ```js
-  'background',
-  'layer',
-  'layerAccent',
-  'layerAccentHover',
-  'layerAccentActive',
-  'field',
-  'backgroundInverse',
-  'backgroundBrand',
-  'interactive',
+// Background
+background = white;
+backgroundInverse = gray80;
+backgroundBrand = blue60;
+backgroundActive = gray30;
+backgroundHover = whiteHover;
+backgroundInverseHover = gray80Hover;
+backgroundSelected = gray20;
+backgroundSelectedHover = gray20Hover;
 
-  'borderSubtle',
-  'borderStrong',
-  'borderInverse',
-  'borderInteractive',
+// Layer
+// layer-01
+layer01 = gray10;
+layerActive01 = gray30;
+layerHover01 = gray10Hover;
+layerSelected01 = gray20;
+layerSelectedHover01 = gray20Hover;
 
-  'textPrimary',
-  'textSecondary',
-  'textPlaceholder',
-  'textHelper',
-  'textOnColor',
-  'textInverse',
+// layer-02
+layer02 = white;
+layerActive02 = gray30;
+layerHover02 = whiteHover;
+layerSelected02 = gray20;
+layerSelectedHover02 = gray20Hover;
 
-  'linkPrimary',
-  'linkSecondary',
-  'linkVisited',
-  'linkInverse',
+// layer-03
+layer03 = gray10;
+layerActive03 = gray30;
+layerHover03 = gray10Hover;
+layerSelected03 = gray20;
+layerSelectedHover03 = gray20Hover;
 
-  'iconPrimary',
-  'iconSecondary',
-  'iconOnColor',
-  'iconInverse',
+// layer
+layerDisabled = gray10;
+layerSelectedInverse = gray100;
+layerSelectedDisabled = gray50;
 
-  'supportError',
-  'supportSuccess',
-  'supportWarning',
-  'supportInfo',
-  'supportErrorInverse',
-  'supportSuccessInverse',
-  'supportWarningInverse',
-  'supportInfoInverse',
+// layer-accent-01
+layerAccent01 = gray20;
+layerAccentActive01 = gray40;
+layerAccentHover01 = gray20Hover;
 
-  'overlay',
-  'toggleOff',
+// layer-accent-02
+layerAccent02 = gray20;
+layerAccentActive02 = gray40;
+layerAccentHover02 = gray20Hover;
 
-  'buttonPrimary',
-  'buttonSecondary',
-  'buttonTertiary',
-  'buttonDangerPrimary',
-  'buttonDangerSecondary',
+// layer-accent-03
+layerAccent03 = gray20;
+layerAccentActive03 = gray40;
+layerAccentHover03 = gray20Hover;
 
-  'backgroundActive',
-  'layerActive',
+// Field
+// field-01
+field01 = gray10;
+fieldHover01 = gray10Hover;
 
-  'buttonDangerActive',
-  'buttonPrimaryActive',
-  'buttonSecondaryActive',
-  'buttonTertiaryActive',
+// field-02
+field02 = white;
+fieldHover02 = whiteHover;
 
-  'focusInset',
-  'focusInverse',
+// field-03
+field03 = gray10;
+fieldHover03 = gray10Hover;
 
-  'backgroundHover',
-  'layerHover',
-  'fieldHover',
-  'backgroundInverseHover',
-  'linkPrimaryHover',
-  'buttonDangerHover',
-  'buttonPrimaryHover',
-  'buttonSecondaryHover',
-  'buttonTertiaryHover',
+// field
+fieldDisabled = gray10;
 
-  'backgroundSelected',
-  'backgroundSelectedHover',
-  'layerSelected',
-  'layerSelectedHover',
-  'layerSelectedInverse',
-  'borderSubtleSelected',
+// Border
+// border-subtle-00
+borderSubtle00 = gray20;
 
-  'layerDisabled',
-  'fieldDisabled',
-  'borderDisabled',
+// border-subtle-01
+borderSubtle01 = gray20;
+borderSubtleSelected01 = gray30;
 
-  'textDisabled',
-  'buttonDisabled',
-  'iconDisabled',
+// border-subtle-02
+borderSubtle02 = gray20;
+borderSubtleSelected02 = gray30;
 
-  'textOnColorDisabled',
-  'iconOnColorDisabled',
-  'layerSelectedDisabled',
+// border-subtle-03
+borderSubtle03 = gray20;
+borderSubtleSelected03 = gray30;
 
-  'skeletonBackground',
-  'skeletonElement',
+// border-strong
+borderStrong01 = gray50;
+borderStrong02 = gray50;
+borderStrong03 = gray50;
+
+// border-inverse
+borderInverse = gray100;
+
+// border-interactive
+borderInteractive = blue60;
+
+// border
+borderDisabled = gray10;
+
+// Text
+textPrimary = gray100;
+textSecondary = gray70;
+textPlaceholder = gray40;
+textHelper = gray60;
+textError = red60;
+textInverse = white;
+textOnColor = white;
+textOnColorDisabled = gray50;
+textDisabled = gray30;
+
+// Link
+linkPrimary = blue60;
+linkPrimaryHover = blue70;
+linkSecondary = blue70;
+linkInverse = blue40;
+linkVisited = purple60;
+
+// Icon
+iconPrimary = gray100;
+iconSecondary = gray70;
+iconInverse = white;
+iconOnColor = white;
+iconOnColorDisabled = gray50;
+iconDisabled = gray30;
+
+// Support
+supportError = red60;
+supportSuccess = green50;
+supportWarning = yellow30;
+supportInfo = blue70;
+supportErrorInverse = red50;
+supportSuccessInverse = green40;
+supportWarningInverse = yellow30;
+supportInfoInverse = blue50;
+supportCautionMinor = yellow30;
+supportCautionMajor = orange40;
+supportCautionUndefined = purple60;
+
+// Focus
+focus = blue60;
+focusInset = white;
+focusInverse = white;
+
+// Skeleton
+skeletonBackground = whiteHover;
+skeletonElement = gray30;
+
+// Misc
+interactive = blue60;
+highlight = blue20;
+overlay = 'rgba(22, 22, 22, 0.5)';
+toggleOff = gray50;
 ```
 
 ### Spacing
 
 Use the spacing scale when building individual components. It includes small
 increments needed to create appropriate spatial relationships for detail-level
-designs. For more information, see the
-[spacing page](/guidelines/spacing/overview/).
+designs. For more information, see the [spacing](/guidelines/spacing/overview/)
+page.
 
 ```js
 spacing01 = miniUnits(0.25);
@@ -402,7 +461,7 @@ Typography has four categories of type styles (universal, productive, editorial,
 and additional) that can be customized through tokens. These tokens are used
 both within components and across layouts. Type tokens are determined by their
 role across the system. For more information, see the
-[typography page](/guidelines/typography/overview/).
+[typography](/guidelines/typography/overview/) page.
 
 ```scss
 // Universal
@@ -896,16 +955,22 @@ The following example demonstrates the relationship between the different
 themes. Each theme shares the same variables and roles, with only the value
 changing for each individual theme.
 
-![Default theme applied](images/themes-1.svg)
+<Row>
+<Column colLg={12}>
 
-| Key | Token       | Role                | White theme value    | Dark theme value    |
-| --- | ----------- | ------------------- | -------------------- | ------------------- |
-| 1   | `$text-02`  | Label color         | `#565656` / Gray 70  | `#bebebe` / Gray 30 |
-| 2   | `$text-01`  | Primary text color  | `#171717` / Gray 100 | `#f3f3f3` / Gray 10 |
-| 3   | `$ui-04`    | Border bottom color | `#8c8c8c` / Gray 50  | `#a4a4a4` / Gray 40 |
-| 4   | `$icon-01`  | Primary icon color  | `#171717` / Gray 100 | `#f3f3f3` / Gray 10 |
-| 5   | `$field-01` | Field color         | `#f3f3f3` / Gray 10  | `#3d3d3d` / Gray 80 |
-| 6   | `$ui-02`    | Page background     | `#ffffff` / White    | `#282828` / Gray 90 |
+![Default theme applied](images/themes-1.png)
+
+</Column>
+</Row>
+
+| Key | Token             | Role                | White theme value | Gray 100 theme value |
+| --- | ----------------- | ------------------- | ----------------- | -------------------- |
+| 1   | `$text-secondary` | Label color         | Gray 70           | Gray 30              |
+| 2   | `$text-primary`   | Primary text color  | Gray 100          | Gray 10              |
+| 3   | `$border-strong`  | Border bottom color | Gray 50           | Gray 60              |
+| 4   | `$icon-primary`   | Primary icon color  | Gray 100          | Gray 10              |
+| 5   | `$field-01`       | Field color         | Gray 10           | Gray 90              |
+| 6   | `$background`     | Page background     | White             | Gray 100             |
 
 ## Resources
 
