--- a/src/pages/guidelines/themes/overview.mdx
+++ b/src/pages/guidelines/themes/overview.mdx
@@ -251,7 +251,7 @@ i.e., `$my-theme`
 
 Alternatively, for relatively minor changes to an existing theme, a developer
 can make changes on a per-token basis. For example, after importing an existing
-Carbon theme, she could just set something like `$interactive-01: hotpink;`.
+Carbon theme, she could just set something like `$interactive: hotpink;`.
 
 ## Tokens
 
@@ -260,9 +260,9 @@ system-wide. Tokens are used across all components and help keep global patterns
 and styles consistent.
 
 All tokens come pre-baked into the Carbon component source code. Tokens are
-denoted by the prefix `$` (e.g. `$ui-01`). Tokens can also be nested within
-other tokens. For example, `$interactive-01` calls the IBM Design Language color
-palette token `$ibm-color__blue--60` for its value in the default theme.
+denoted by the prefix `$` (e.g. `$layer-01`). Tokens can also be nested within
+other tokens. For example, `$interactive` calls the IBM Design Language color
+palette token `$blue-60` for its value in the default theme.
 
 There are several token categories:
 
