--- a/src/pages/guidelines/themes/overview.mdx
+++ b/src/pages/guidelines/themes/overview.mdx
@@ -87,158 +87,109 @@ stylesheet which will replace the values of the default theme.
   values as needed:
 </Title>
 
-```js
-// Background
-background = white;
-backgroundInverse = gray80;
-backgroundBrand = blue60;
-backgroundActive = gray30;
-backgroundHover = whiteHover;
-backgroundInverseHover = gray80Hover;
-backgroundSelected = gray20;
-backgroundSelectedHover = gray20Hover;
+```scss
+$carbon--theme--white: (
+  // Background
+  background: #ffffff,
+  background-active: #c6c6c6,
+  background-hover: #e5e5e5,
+  background-selected: #e0e0e0,
+  background-selected-hover: #cacaca,
+  background-inverse: #393939,
+  background-inverse-hover: #4c4c4c,
+  background-brand: #0f62fe,
 
-// Layer
-// layer-01
-layer01 = gray10;
-layerActive01 = gray30;
-layerHover01 = gray10Hover;
-layerSelected01 = gray20;
-layerSelectedHover01 = gray20Hover;
+  // Layer
+  layer: #f4f4f4,
+  layer-active: #c6c6c6,
+  layer-hover: #e5e5e5,
+  layer-selected: #e0e0e0,
+  layer-selected-hover: #cacaca,
+  layer-selected-inverse: #161616,
+  layer-selected-disabled: #8d8d8d,
+  layer-accent: #e0e0e0,
+  layer-accent-active: #a8a8a8,
+  layer-accent-hover: #d1d1d1,
+  layer-disabled: #f4f4f4,
 
-// layer-02
-layer02 = white;
-layerActive02 = gray30;
-layerHover02 = whiteHover;
-layerSelected02 = gray20;
-layerSelectedHover02 = gray20Hover;
+  // Field
+  field: #f4f4f4,
+  field-hover: #e5e5e5,
+  field-disabled: #f4f4f4,
 
-// layer-03
-layer03 = gray10;
-layerActive03 = gray30;
-layerHover03 = gray10Hover;
-layerSelected03 = gray20;
-layerSelectedHover03 = gray20Hover;
+  // Interactive
+  interactive: #0f62fe,
 
-// layer
-layerDisabled = gray10;
-layerSelectedInverse = gray100;
-layerSelectedDisabled = gray50;
+  // Border
+  border-subtle: #e0e0e0,
+  border-subtle-selected: #c6c6c6,
+  border-strong: #8d8d8d,
+  border-inverse: #161616,
+  border-interactive: #0f62fe,
+  border-disabled: #f4f4f4,
 
-// layer-accent-01
-layerAccent01 = gray20;
-layerAccentActive01 = gray40;
-layerAccentHover01 = gray20Hover;
+  // Text
+  text-primary: #161616,
+  text-secondary: #525252,
+  text-placeholder: #a8a8a8,
+  text-helper: #6f6f6f,
+  text-on-color: #ffffff,
+  text-inverse: #ffffff,
+  text-disabled: #c6c6c6,
+  text-on-color-disabled: #8d8d8d,
 
-// layer-accent-02
-layerAccent02 = gray20;
-layerAccentActive02 = gray40;
-layerAccentHover02 = gray20Hover;
+  //Link
+  link-primary: #0f62fe,
+  link-primary-hover: #0043ce,
+  link-secondary: #0043ce,
+  link-visited: #8a3ffc,
+  link-inverse: #78a9ff,
 
-// layer-accent-03
-layerAccent03 = gray20;
-layerAccentActive03 = gray40;
-layerAccentHover03 = gray20Hover;
+  //Icon
+  icon-primary: #161616,
+  icon-secondary: #525252,
+  icon-on-color: #ffffff,
+  icon-inverse: #ffffff,
+  icon-disabled: #c6c6c6,
+  icon-on-color-disabled: #8d8d8d,
 
-// Field
-// field-01
-field01 = gray10;
-fieldHover01 = gray10Hover;
+  // Support
+  support-error: #da1e28,
+  support-success: #198038,
+  support-warning: #f1c21b,
+  support-info: #0043ce,
+  support-error-inverse: #fa4d56,
+  support-success-inverse: #42be65,
+  support-warning-inverse: #f1c21b,
+  support-info-inverse: #4589ff,
 
-// field-02
-field02 = white;
-fieldHover02 = whiteHover;
+  // Misc.
+  overlay: rgba(22, 22, 22, 0.5),
+  toggle-off: #8d8d8d,
 
-// field-03
-field03 = gray10;
-fieldHover03 = gray10Hover;
-
-// field
-fieldDisabled = gray10;
-
-// Border
-// border-subtle-00
-borderSubtle00 = gray20;
-
-// border-subtle-01
-borderSubtle01 = gray20;
-borderSubtleSelected01 = gray30;
-
-// border-subtle-02
-borderSubtle02 = gray20;
-borderSubtleSelected02 = gray30;
-
-// border-subtle-03
-borderSubtle03 = gray20;
-borderSubtleSelected03 = gray30;
-
-// border-strong
-borderStrong01 = gray50;
-borderStrong02 = gray50;
-borderStrong03 = gray50;
-
-// border-inverse
-borderInverse = gray100;
-
-// border-interactive
-borderInteractive = blue60;
-
-// border
-borderDisabled = gray10;
-
-// Text
-textPrimary = gray100;
-textSecondary = gray70;
-textPlaceholder = gray40;
-textHelper = gray60;
-textError = red60;
-textInverse = white;
-textOnColor = white;
-textOnColorDisabled = gray50;
-textDisabled = gray30;
-
-// Link
-linkPrimary = blue60;
-linkPrimaryHover = blue70;
-linkSecondary = blue70;
-linkInverse = blue40;
-linkVisited = purple60;
-
-// Icon
-iconPrimary = gray100;
-iconSecondary = gray70;
-iconInverse = white;
-iconOnColor = white;
-iconOnColorDisabled = gray50;
-iconDisabled = gray30;
-
-// Support
-supportError = red60;
-supportSuccess = green50;
-supportWarning = yellow30;
-supportInfo = blue70;
-supportErrorInverse = red50;
-supportSuccessInverse = green40;
-supportWarningInverse = yellow30;
-supportInfoInverse = blue50;
-supportCautionMinor = yellow30;
-supportCautionMajor = orange40;
-supportCautionUndefined = purple60;
+  // Button
+  button-primary: #0f62fe,
+  button-primary-active: #002d9c,
+  button-primary-hover: #0353e9,
+  button-secondary: #393939,
+  button-secondary-active: #6f6f6f,
+  button-secondary-hover: #4c4c4c,
+  button-tertiary: #0f62fe,
+  button-tertiary-active: #002d9c,
+  button-tertiary-hover: #0353e9,
+  button-danger-primary: #da1e28,
+  button-danger-secondary: #da1e28,
+  button-danger-active: #750e13,
+  button-danger-hover: #b81921,
+  button-disabled: #c6c6c6,
 
 // Focus
-focus = blue60;
-focusInset = white;
-focusInverse = white;
+  focus-inset: #ffffff,
+  focus-inverse: #ffffff,
 
 // Skeleton
-skeletonBackground = whiteHover;
-skeletonElement = gray30;
-
-// Misc
-interactive = blue60;
-highlight = blue20;
-overlay = 'rgba(22, 22, 22, 0.5)';
-toggleOff = gray50;
+  skeleton-background: #e5e5e5,
+  skeleton-element: #c6c6c6,
 ```
 
 <Title> 2. Name the mixin: </Title>
@@ -278,158 +229,98 @@ roles and usage. This allows for uniform color application across themes while
 maintaining full styling flexibility. For more information, see the
 [color](/guidelines/color/overview) page.
 
-```js
-// Background
-background = white;
-backgroundInverse = gray80;
-backgroundBrand = blue60;
-backgroundActive = gray30;
-backgroundHover = whiteHover;
-backgroundInverseHover = gray80Hover;
-backgroundSelected = gray20;
-backgroundSelectedHover = gray20Hover;
-
-// Layer
-// layer-01
-layer01 = gray10;
-layerActive01 = gray30;
-layerHover01 = gray10Hover;
-layerSelected01 = gray20;
-layerSelectedHover01 = gray20Hover;
-
-// layer-02
-layer02 = white;
-layerActive02 = gray30;
-layerHover02 = whiteHover;
-layerSelected02 = gray20;
-layerSelectedHover02 = gray20Hover;
-
-// layer-03
-layer03 = gray10;
-layerActive03 = gray30;
-layerHover03 = gray10Hover;
-layerSelected03 = gray20;
-layerSelectedHover03 = gray20Hover;
-
-// layer
-layerDisabled = gray10;
-layerSelectedInverse = gray100;
-layerSelectedDisabled = gray50;
-
-// layer-accent-01
-layerAccent01 = gray20;
-layerAccentActive01 = gray40;
-layerAccentHover01 = gray20Hover;
-
-// layer-accent-02
-layerAccent02 = gray20;
-layerAccentActive02 = gray40;
-layerAccentHover02 = gray20Hover;
-
-// layer-accent-03
-layerAccent03 = gray20;
-layerAccentActive03 = gray40;
-layerAccentHover03 = gray20Hover;
-
-// Field
-// field-01
-field01 = gray10;
-fieldHover01 = gray10Hover;
-
-// field-02
-field02 = white;
-fieldHover02 = whiteHover;
-
-// field-03
-field03 = gray10;
-fieldHover03 = gray10Hover;
-
-// field
-fieldDisabled = gray10;
-
-// Border
-// border-subtle-00
-borderSubtle00 = gray20;
-
-// border-subtle-01
-borderSubtle01 = gray20;
-borderSubtleSelected01 = gray30;
-
-// border-subtle-02
-borderSubtle02 = gray20;
-borderSubtleSelected02 = gray30;
-
-// border-subtle-03
-borderSubtle03 = gray20;
-borderSubtleSelected03 = gray30;
-
-// border-strong
-borderStrong01 = gray50;
-borderStrong02 = gray50;
-borderStrong03 = gray50;
-
-// border-inverse
-borderInverse = gray100;
-
-// border-interactive
-borderInteractive = blue60;
-
-// border
-borderDisabled = gray10;
-
-// Text
-textPrimary = gray100;
-textSecondary = gray70;
-textPlaceholder = gray40;
-textHelper = gray60;
-textError = red60;
-textInverse = white;
-textOnColor = white;
-textOnColorDisabled = gray50;
-textDisabled = gray30;
-
-// Link
-linkPrimary = blue60;
-linkPrimaryHover = blue70;
-linkSecondary = blue70;
-linkInverse = blue40;
-linkVisited = purple60;
-
-// Icon
-iconPrimary = gray100;
-iconSecondary = gray70;
-iconInverse = white;
-iconOnColor = white;
-iconOnColorDisabled = gray50;
-iconDisabled = gray30;
-
-// Support
-supportError = red60;
-supportSuccess = green50;
-supportWarning = yellow30;
-supportInfo = blue70;
-supportErrorInverse = red50;
-supportSuccessInverse = green40;
-supportWarningInverse = yellow30;
-supportInfoInverse = blue50;
-supportCautionMinor = yellow30;
-supportCautionMajor = orange40;
-supportCautionUndefined = purple60;
-
-// Focus
-focus = blue60;
-focusInset = white;
-focusInverse = white;
-
-// Skeleton
-skeletonBackground = whiteHover;
-skeletonElement = gray30;
-
-// Misc
-interactive = blue60;
-highlight = blue20;
-overlay = 'rgba(22, 22, 22, 0.5)';
-toggleOff = gray50;
+```scss
+$carbon--theme--white: (
+  // Background
+  background: #ffffff,
+  background-active: #c6c6c6,
+  background-hover: #e5e5e5,
+  background-selected: #e0e0e0,
+  background-selected-hover: #cacaca,
+  background-inverse: #393939,
+  background-inverse-hover: #4c4c4c,
+  background-brand: #0f62fe,
+  // Layer
+  layer: #f4f4f4,
+  layer-active: #c6c6c6,
+  layer-hover: #e5e5e5,
+  layer-selected: #e0e0e0,
+  layer-selected-hover: #cacaca,
+  layer-selected-inverse: #161616,
+  layer-selected-disabled: #8d8d8d,
+  layer-accent: #e0e0e0,
+  layer-accent-active: #a8a8a8,
+  layer-accent-hover: #d1d1d1,
+  layer-disabled: #f4f4f4,
+  // Field
+  field: #f4f4f4,
+  field-hover: #e5e5e5,
+  field-disabled: #f4f4f4,
+  // Interactive
+  interactive: #0f62fe,
+  // Border
+  border-subtle: #e0e0e0,
+  border-subtle-selected: #c6c6c6,
+  border-strong: #8d8d8d,
+  border-inverse: #161616,
+  border-interactive: #0f62fe,
+  border-disabled: #f4f4f4,
+  // Text
+  text-primary: #161616,
+  text-secondary: #525252,
+  text-placeholder: #a8a8a8,
+  text-helper: #6f6f6f,
+  text-on-color: #ffffff,
+  text-inverse: #ffffff,
+  text-disabled: #c6c6c6,
+  text-on-color-disabled: #8d8d8d,
+  //Link
+  link-primary: #0f62fe,
+  link-primary-hover: #0043ce,
+  link-secondary: #0043ce,
+  link-visited: #8a3ffc,
+  link-inverse: #78a9ff,
+  //Icon
+  icon-primary: #161616,
+  icon-secondary: #525252,
+  icon-on-color: #ffffff,
+  icon-inverse: #ffffff,
+  icon-disabled: #c6c6c6,
+  icon-on-color-disabled: #8d8d8d,
+  // Support
+  support-error: #da1e28,
+  support-success: #198038,
+  support-warning: #f1c21b,
+  support-info: #0043ce,
+  support-error-inverse: #fa4d56,
+  support-success-inverse: #42be65,
+  support-warning-inverse: #f1c21b,
+  support-info-inverse: #4589ff,
+  // Misc.
+  overlay: rgba(22, 22, 22, 0.5),
+  toggle-off: #8d8d8d,
+  // Button
+  button-primary: #0f62fe,
+  button-primary-active: #002d9c,
+  button-primary-hover: #0353e9,
+  button-secondary: #393939,
+  button-secondary-active: #6f6f6f,
+  button-secondary-hover: #4c4c4c,
+  button-tertiary: #0f62fe,
+  button-tertiary-active: #002d9c,
+  button-tertiary-hover: #0353e9,
+  button-danger-primary: #da1e28,
+  button-danger-secondary: #da1e28,
+  button-danger-active: #750e13,
+  button-danger-hover: #b81921,
+  button-disabled: #c6c6c6,
+  // Focus
+  focus-inset: #ffffff,
+  focus-inverse: #ffffff,
+  // Skeleton
+  skeleton-background: #e5e5e5,
+  skeleton-element: #c6c6c6
+);
 ```
 
 ### Spacing
@@ -439,20 +330,20 @@ increments needed to create appropriate spatial relationships for detail-level
 designs. For more information, see the [spacing](/guidelines/spacing/overview/)
 page.
 
-```js
-spacing01 = miniUnits(0.25);
-spacing02 = miniUnits(0.5);
-spacing03 = miniUnits(1);
-spacing04 = miniUnits(1.5);
-spacing05 = miniUnits(2);
-spacing06 = miniUnits(3);
-spacing07 = miniUnits(4);
-spacing08 = miniUnits(5);
-spacing09 = miniUnits(6);
-spacing10 = miniUnits(8);
-spacing11 = miniUnits(10);
-spacing12 = miniUnits(12);
-spacing13 = miniUnits(20);
+```scss
+  $spacing-01: 0.125rem,
+  $spacing-02: 0.25rem,
+  $spacing-03: 0.5rem,
+  $spacing-04: 0.75rem,
+  $spacing-05: 1rem,
+  $spacing-06: 1.5rem,
+  $spacing-07: 2rem,
+  $spacing-08: 2.5rem,
+  $spacing-09: 3rem,
+  $spacing-10: 4rem,
+  $spacing-11: 5rem,
+  $spacing-12: 6rem,
+  $spacing-13: 10rem,
 ```
 
 ### Typography
