--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -302,11 +302,22 @@ appropriate chart type.
 
 </OverviewCard>
 </Column>
+
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Network diagram"
     href="/data-visualization/complex-charts#network-diagrams"
-    tag="Design only"
+    >
+
+![GATSBY_EMPTY_ALT](images/network-diagram.svg)
+
+</OverviewCard>
+</Column>
+
+<Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
+ <OverviewCard
+    title="Tree diagram"
+    disabled
     >
 
 ![GATSBY_EMPTY_ALT](images/treediagram.svg)
