Term 'light' used instead of 'dark'
In the paragraph 
'Dark themes
Gray 90 components are paired with Gray 100 backgrounds to make the Gray 100 Theme and Gray 80 components with Gray 90 backgrounds to make the Gray 90 Theme. Some components, such as buttons and toggles, share the same colors across both light themes.' - term 'light' (word behind the last one) is used and there should be 'dark'.

--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -202,7 +202,7 @@ themes.
 Gray 90 components are paired with Gray 100 backgrounds to make the Gray 100
 Theme and Gray 80 components with Gray 90 backgrounds to make the Gray 90 Theme.
 Some components, such as buttons and toggles, share the same colors across both
-light themes.
+dark themes.
 
 <DoDontRow>
   <DoDont
