[Don't merge yet] feat: update to gtc v2 and gatsby v3 (#2416)
* chore: update deps

* fix: gatsby v3 migration woes

* chore: fix shadowing issues

* chore: update charts to use gatsby-image

Co-authored-by: Josefina Mancilla <32556167+jnm2377@users.noreply.github.com>

--- a/src/pages/developing/frameworks/web-components.mdx
+++ b/src/pages/developing/frameworks/web-components.mdx
@@ -63,21 +63,28 @@ support, contact the
 
 #### How to install
 
-All components are available via CDN. This means that they can be added to your application without the need of any 
-bundler configuration. Each component is available by the `latest` tag, or referencing a specific version (starting at 
+All components are available via CDN. This means that they can be added to your
+application without the need of any bundler configuration. Each component is
+available by the `latest` tag, or referencing a specific version (starting at
 version `v1.16.0`):
 
 ```html
 <!-- By `latest` tag -->
-<script type="module" src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/accordion.min.js"></script>
+<script
+  type="module"
+  src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/accordion.min.js"
+></script>
 
 <!-- By specific version -->
-<script type="module" src="https://1.www.s81c.com/common/carbon/web-components/version/v1.16.0/accordion.min.js"></script>
+<script
+  type="module"
+  src="https://1.www.s81c.com/common/carbon/web-components/version/v1.16.0/accordion.min.js"
+></script>
 ```
 
 These are the list of available components via CDN:
 
-- accordion.min.js 
+- accordion.min.js
 - breadcrumb.min.js
 - button.min.js
 - checkbox.min.js
@@ -119,27 +126,36 @@ These are the list of available components via CDN:
 - tooltip.min.js
 - ui-shell.min.js
 
-To use the right-to-left (RTL) version of the artifacts, change the file extention from `.min.js` to `.rtl.min.js`. For
-example:
+To use the right-to-left (RTL) version of the artifacts, change the file
+extention from `.min.js` to `.rtl.min.js`. For example:
 
 ```html
 <!-- By `latest` tag (RTL) -->
-<script type="module" src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/accordion.rtl.min.js"></script>
+<script
+  type="module"
+  src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/accordion.rtl.min.js"
+></script>
 
 <!-- By specific version (RTL) -->
-<script type="module" src="https://1.www.s81c.com/common/carbon/web-components/version/v1.16.0/accordion.rtl.min.js"></script>
+<script
+  type="module"
+  src="https://1.www.s81c.com/common/carbon/web-components/version/v1.16.0/accordion.rtl.min.js"
+></script>
 ```
 
 #### Basic usage
 
-The CDN artifacts define the custom elements for the browser, so they can be directly used once the script tag has been
-added to the page. For example:
+The CDN artifacts define the custom elements for the browser, so they can be
+directly used once the script tag has been added to the page. For example:
 
 ```html
 <!DOCTYPE html>
 <html>
   <head>
-    <script type="module" src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/dropdown.min.js"></script>
+    <script
+      type="module"
+      src="https://1.www.s81c.com/common/carbon/web-components/tag/latest/dropdown.min.js"
+    ></script>
     <style type="text/css">
       // Suppresses the custom element until it has been defined
       bx-dropdown:not(:defined),
@@ -162,7 +178,8 @@ added to the page. For example:
 </html>
 ```
 
-Our example at [CodeSandbox](https://codesandbox.io) shows usage with only CDN artifacts:
+Our example at [CodeSandbox](https://codesandbox.io) shows usage with only CDN
+artifacts:
 
 [![Edit carbon-web-components](https://codesandbox.io/static/img/play-codesandbox.svg)](https://codesandbox.io/s/github/carbon-design-system/carbon-web-components/tree/master/examples/codesandbox/cdn)
 
