--- a/src/pages/patterns/status-indicator-pattern/index.mdx
+++ b/src/pages/patterns/status-indicator-pattern/index.mdx
@@ -378,16 +378,18 @@ visualizations, for example network diagrams.
 The shapes are only the most basic geometries, derived from the larger icon
 containers, so they can be easily discerned at small sizes. Shape indicators are
 not available in outline because they are so small. The only situations in which
-you would use an outline is to ensure contrast accessibility for yellows or oranges in the Carbon light themes.
+you would use an outline is to ensure contrast accessibility for yellows or
+oranges in the Carbon light themes.
 
 The table below is a first pass at establishing a standard lexicon for symbol
 indicators across IBM products.
 
 #### Same shape, different color
 
-The status shapes naturally allow more room for interpretation than the status icons. Certain shapes can take on different colors for different circumstances. However, NEVER use the same shape, in different colors, within the same experience.
-
-
+The status shapes naturally allow more room for interpretation than the status
+icons. Certain shapes can take on different colors for different circumstances.
+However, NEVER use the same shape, in different colors, within the same
+experience.
 
 <StatusIndicatorTable attention="glyph" />
 
