--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -147,10 +147,18 @@ reflect IBM's spirit, beliefs, and design principles.
 
 ## Gatsby theme resources
 
-The Gatsby Sketch kit has all the components, patterns, and sample layouts that have been developed by teams within the IBM ecosystem. The Gatsby theme site includes the components, guidelines, and everything you need to create and contribute to Carbon sites.
+The Gatsby Sketch kit has all the components, patterns, and sample layouts that
+have been developed by teams within the IBM ecosystem. The Gatsby theme site
+includes the components, guidelines, and everything you need to create and
+contribute to Carbon sites.
 
 ### Image production guidelines
-For anyone interested in contributing to the Carbon Design System website, or making images for their own Pattern Asset Library (PAL), we follow a set of guidelines to ensure consistency across the content in the Gatsby ecosystem. The image production guidelines Sketch kit includes guidance, symbols and templates to help designers with every aspect of image creation and component specs.
+
+For anyone interested in contributing to the Carbon Design System website, or
+making images for their own Pattern Asset Library (PAL), we follow a set of
+guidelines to ensure consistency across the content in the Gatsby ecosystem. The
+image production guidelines Sketch kit includes guidance, symbols and templates
+to help designers with every aspect of image creation and component specs.
 
 <Row className="resource-card-group">
 
